--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-uvicorn[standard]
-scikit-learn
-torch==2.1.0+cpu   # CPU-only PyTorch to save memory
-transformers==4.40.0  # smaller version; consider distilbert or tiny models
+fastapi==0.102.0
+uvicorn[standard]==0.23.2
+scikit-learn==1.7.2
+torch==2.8.0+cpu --index-url https://download.pytorch.org/whl/cpu
+transformers==4.40.0
