--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.102.0
-uvicorn[standard]==0.23.2
-scikit-learn==1.7.2
-torch==2.8.0+cpu --index-url https://download.pytorch.org/whl/cpu
-transformers==4.40.0
+fastapi
+uvicorn
+scikit-learn
+transformers
+torch
